force-app/main/default/objects/Opportunity/fields/IGT_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>IGT_Annual_Revenue__c</fullName>
    <description>Calculated annual revenue from Indoor Grease Trap (IGT) services based on service rate and frequency.</description>
    <formula>IF(OR(ISBLANK(IGT_Frequency_Days__c), IGT_Frequency_Days__c = 0), 0, (365 / IGT_Frequency_Days__c) * IGT_Rate__c)</formula>
    <inlineHelpText>Automatically calculated: (365 / IGT Frequency Days) × IGT Rate. Returns 0 if frequency is blank or zero.</inlineHelpText>
    <label>IGT Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>