force-app/main/default/objects/Opportunity/fields/IGT_Frequency_Days__c.field-meta.xml
<CustomField>
    <fullName>IGT_Frequency_Days__c</fullName>
    <description>Number of days between Indoor Grease Trap (IGT) service visits. Used to calculate annual service frequency and IGT revenue.</description>
    <inlineHelpText>Enter the number of days between IGT service visits (e.g., 30 for monthly service).</inlineHelpText>
    <label>IGT Frequency Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>