force-app/main/default/objects/Opportunity/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UCO</fullName>
            </value>
            <value>
                <fullName>IGT</fullName>
            </value>
            <value>
                <fullName>EGT</fullName>
            </value>
            <value>
                <fullName>HYD</fullName>
            </value>
            <value>
                <fullName>WR</fullName>
                <isActive>false</isActive>
                <label>WR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>