force-app/main/default/objects/Opportunity/fields/UCO_Gal_Month__c.field-meta.xml
<CustomField>
    <fullName>UCO_Gal_Month__c</fullName>
    <description>Monthly UCO (Used Cooking Oil) collection volume in gallons. Used to calculate UCO revenue.</description>
    <inlineHelpText>Select the estimated monthly UCO collection volume in gallons.</inlineHelpText>
    <label>UCO Gal/Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>