force-app/main/default/objects/Opportunity/fields/UCO_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>UCO_Monthly_Revenue__c</fullName>
    <description>Calculated monthly revenue from UCO (Used Cooking Oil) collection based on volume and commodity value.</description>
    <formula>VALUE(TEXT(UCO_Gal_Month__c)) * UCO_Commodity_Value__c</formula>
    <inlineHelpText>Automatically calculated: UCO Gal/Month × UCO Commodity Value.</inlineHelpText>
    <label>UCO Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>